fix: github icon contrast in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,15 +45,3 @@
         transform: scaleX(1);
     }
 }
-
-@keyframes neon-glow {
-
-    0%,
-    100% {
-        text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff;
-    }
-
-    50% {
-        text-shadow: 0 0 20px #0ff, 0 0 40px #0ff, 0 0 60px #0ff;
-    }
-}
